# Ring_example_MPI_CUDA

./: CMakeLists.txt  G2_ring.cpp  G2_ring_hpx.cpp  G2_ring_hpx_cpu.cpp  README.md  allocation.cpp  allocation.hpp  cuda_device_list.cpp  gpuDirect.cpp  gpuDirect_hpx.cpp  host_to_device.cu  host_to_device.hpp  main.cpp  threads_mpi.cpp  timer.hpp  up_n_down.cpp  util.cu  util.hpp  util_cuda.cu  util_cuda.hpp  util_mpi.hpp
Ring_algorithm/: CMakeLists.txt  copy.hpp  cuda_stream.hpp  device_allocator.hpp  device_type.hpp  error_cuda.cpp  error_cuda.hpp  kernels_interface.hpp  main_ring.cpp  reshapable_matrix.hpp  stream_container.hpp  stream_functions.hpp  tp_accumulator_gpu.hpp  tp_accumulator_kernels.cu  util_mpi.hpp
hpx_mpi_futures/: CMakeLists.txt  hpx_G2_ring.cpp
tests/: CMakeLists.txt
tests/d_dim_range/: CMakeLists.txt  d_dim_range.cpp
